--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "travelproject",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "homepage": "https://studyrachel.github.io/TravelProject/",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
@@ -21,6 +24,7 @@
     "dva-core": "^2.0.4",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "gh-pages": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -34,7 +38,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
