--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "travelproject",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
-  "homepage": "https://studyrachel.github.io/TravelProject/",
+  "homepage": "https://studyrachel.github.io/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "expo eject"    
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
