--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"    
+    "eject": "expo eject"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
@@ -24,7 +24,6 @@
     "dva-core": "^2.0.4",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
-    "gh-pages": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -42,7 +41,8 @@
     "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "gh-pages": "^4.0.0"
   },
   "private": true
 }
